sales-schema z-index fix

--- a/src/app/domain/sales/catalogue/catalogue-sale-order.scss
+++ b/src/app/domain/sales/catalogue/catalogue-sale-order.scss
@@ -108,6 +108,7 @@ sale-order-alert {
     @include responsive-only(gt-xs) {
       .sales-schema {
         position: absolute;
+        z-index: 2;
       }
     }
 
